srcs/deployments/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    run: nginx
    server: nginx

spec:
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: ssh
              containerPort: 22
          volumeMounts:
              - name: pma-claim
                mountPath: /var/www/phpmyadmin
              - name : wp-claim
                mountPath: /var/www/wordpress
              - name: nginx-conf
                mountPath: /etc/nginx/nginx.conf
                subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: pma-claim
          persistentVolumeClaim:
            claimName: pma-claim
        - name: wp-claim
          persistentVolumeClaim:
            claimName: wp-claim
