srcs/deployments/wp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    run: wordpress
spec:
  selector:
    matchLabels:
      run: wordpress
  template:
    metadata:
      labels:
        run: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress
          imagePullPolicy: Never
          ports :
          - name : http
            containerPort : 5050
          volumeMounts:
              - name: wp-claim
                mountPath: /var/www/wordpress
          lifecycle:
            postStart:
              exec:
                command: ["./init.sh"]
      volumes:
        - name: wp-claim
          persistentVolumeClaim:
            claimName: wp-claim
